frontend/test/should_pass/ret_007.grg
rule r : (Edge)
{
    x:Node;
    y:Node;

    x -e:Edge-> y;

    modify {
    	-f:Edge<e>-> ;
        return(f);
    }
}
